<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListaFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btPruebaEdicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/prueba_de_edicion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swSinPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/sin_pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgTareas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swSinPagar">

        <RadioButton
            android:id="@+id/rbTAbierta"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/abierta" />

        <RadioButton
            android:id="@+id/rbTEncurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_curso1" />

        <RadioButton
            android:id="@+id/rbTCerrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrada1" />

        <RadioButton
            android:id="@+id/rbTTodas"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/todas" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>